--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   "dependencies": {
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
+    "csurf": "^1.9.0",
+    "db-migrate-mysql": "^1.1.10",
     "debug": "~2.2.0",
     "express": "~4.14.0",
-    "express-formidable": "^1.0.0",
     "express-session": "^1.15.0",
+    "formidable": "^1.1.1",
+    "method-override": "^2.3.7",
     "morgan": "~1.7.0",
+    "mysql": "^2.13.0",
     "pug": "^2.0.0-beta10",
     "serve-favicon": "~2.3.0"
   }
