--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "csurf": "^1.9.0",
     "db-migrate-mysql": "^1.1.10",
     "debug": "~2.2.0",
+    "dotenv": "^4.0.0",
     "express": "~4.14.0",
+    "express-mysql-session": "^1.2.0",
     "express-session": "^1.15.0",
-    "formidable": "^1.1.1",
+    "express-validator": "^3.1.2",
     "method-override": "^2.3.7",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "mysql": "^2.13.0",
     "pug": "^2.0.0-beta10",
     "serve-favicon": "~2.3.0"
