--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon --inspect ./server/bin/www",
+    "build": "rm -rf dist && webpack",
+    "dev": "webpack-dev-server --hot --inline --history-api-fallback"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -13,14 +15,45 @@
     "debug": "~2.2.0",
     "dotenv": "^4.0.0",
     "express": "~4.14.0",
+    "express-flash": "0.0.2",
     "express-mysql-session": "^1.2.0",
     "express-session": "^1.15.0",
     "express-validator": "^3.1.2",
+    "http-proxy": "^1.16.2",
     "method-override": "^2.3.7",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
     "mysql": "^2.13.0",
     "pug": "^2.0.0-beta10",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0",
+    "react-redux": "^5.0.3",
+    "react-bootstrap": "^0.30.8",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "css-loader": "^0.26.2",
+    "eslint": "^3.17.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "react-hot-loader": "^1.3.1",
+    "style-loader": "^0.13.2",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-hot-middleware": "^2.17.1"
   }
 }
