--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon --inspect ./server/bin/www",
-    "build": "rm -rf dist && webpack",
-    "dev": "webpack-dev-server --hot --inline --history-api-fallback"
+    "start": "NODE_ENV=development nodemon --inspect ./server/bin/www",
+    "start:prod": "NODE_ENV=production node ./server/bin/www",
+    "build:clean": "rm -rf dist && webpack --config webpack.config.dev.js --color -p --progress",
+    "build": "NODE_ENV=production webpack --config webpack.prod.babel.js --color -p --progress"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
+    "bootstrap": "^3.3.7",
     "cookie-parser": "~1.4.3",
     "csurf": "^1.9.0",
     "db-migrate-mysql": "^1.1.10",
@@ -26,11 +28,15 @@
     "mysql": "^2.13.0",
     "pug": "^2.0.0-beta10",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
-    "redux": "^3.6.0",
-    "react-redux": "^5.0.3",
     "react-bootstrap": "^0.30.8",
+    "react-bootstrap-validation": "^0.1.11",
+    "react-cookie": "^1.0.5",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-redux-form": "^1.9.0",
+    "react-router": "^3.0.2",
+    "react-router-bootstrap": "^0.23.1",
+    "redux": "^3.6.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
@@ -51,6 +57,7 @@
     "html-webpack-plugin": "^2.28.0",
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.13.2",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-dev-server": "^2.4.1",
