--- a/package.json
+++ b/package.json
@@ -10,33 +10,34 @@
   },
   "dependencies": {
     "body-parser": "~1.15.2",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "~3.3.7",
     "cookie-parser": "~1.4.3",
-    "csurf": "^1.9.0",
-    "db-migrate-mysql": "^1.1.10",
+    "csurf": "~1.9.0",
+    "db-migrate-mysql": "~1.1.10",
     "debug": "~2.2.0",
-    "dotenv": "^4.0.0",
+    "dotenv": "~4.0.0",
     "express": "~4.14.0",
     "express-flash": "0.0.2",
-    "express-mysql-session": "^1.2.0",
-    "express-session": "^1.15.0",
-    "express-validator": "^3.1.2",
-    "http-proxy": "^1.16.2",
-    "method-override": "^2.3.7",
+    "express-mysql-session": "~1.2.0",
+    "express-session": "~1.15.0",
+    "express-validator": "~3.1.2",
+    "http-proxy": "~1.16.2",
+    "method-override": "~2.3.8",
     "morgan": "~1.7.0",
-    "multer": "^1.3.0",
+    "multer": "~1.3.0",
     "mysql": "^2.13.0",
-    "pug": "^2.0.0-beta10",
-    "react": "^15.4.2",
-    "react-bootstrap": "^0.30.8",
-    "react-bootstrap-validation": "^0.1.11",
-    "react-cookie": "^1.0.5",
-    "react-dom": "^15.4.2",
+    "prop-types": "^15.5.8",
+    "react": "~15.4.2",
+    "react-bootstrap": "~0.30.8",
+    "react-bootstrap-validation": "~0.1.11",
+    "react-dom": "~15.4.2",
     "react-redux": "^5.0.3",
     "react-redux-form": "^1.9.0",
-    "react-router": "^3.0.2",
-    "react-router-bootstrap": "^0.23.1",
+    "react-router": "~3.0.2",
+    "react-router-bootstrap": "~0.23.1",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
