--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "dotenv": "~4.0.0",
     "express": "~4.14.0",
     "express-flash": "0.0.2",
+    "express-jwt": "~5.3.0",
     "express-mysql-session": "~1.2.0",
     "express-session": "~1.15.0",
     "express-validator": "~3.1.2",
     "http-proxy": "~1.16.2",
+    "jsonwebtoken": "~7.4.1",
     "method-override": "~2.3.8",
     "morgan": "~1.7.0",
     "multer": "~1.3.0",
