--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "react-bootstrap-validation": "~0.1.11",
     "react-dom": "~15.4.2",
     "react-redux": "^5.0.3",
-    "react-redux-form": "^1.9.0",
     "react-router": "~3.0.2",
     "react-router-bootstrap": "~0.23.1",
     "redux": "^3.6.0",
+    "redux-form": "^6.7.0",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
     "serve-favicon": "~2.3.0"
