--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-bootstrap": "~0.30.8",
     "react-bootstrap-validation": "~0.1.11",
     "react-dom": "~15.4.2",
+    "react-dropzone": "^3.13.2",
     "react-redux": "^5.0.3",
     "react-router": "~3.0.2",
     "react-router-bootstrap": "~0.23.1",
