--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-bootstrap-validation": "~0.1.11",
     "react-dom": "~15.4.2",
     "react-dropzone": "^3.13.2",
+    "react-images": "^0.5.4",
     "react-redux": "^5.0.3",
     "react-router": "~3.0.2",
     "react-router-bootstrap": "~0.23.1",
@@ -47,6 +48,7 @@
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
