--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "express-mysql-session": "~1.2.0",
     "express-session": "~1.15.0",
     "express-validator": "~3.1.2",
+    "font-awesome": "^4.7.0",
+    "fs-extra": "^3.0.1",
     "http-proxy": "~1.16.2",
     "jsonwebtoken": "~7.4.1",
+    "lodash.range": "^3.2.0",
     "method-override": "~2.3.8",
     "morgan": "~1.7.0",
     "multer": "~1.3.0",
@@ -32,12 +35,15 @@
     "react": "~15.4.2",
     "react-bootstrap": "~0.30.8",
     "react-bootstrap-validation": "~0.1.11",
+    "react-bs-notifier": "^4.3.2",
     "react-dom": "~15.4.2",
     "react-dropzone": "^3.13.2",
     "react-images": "^0.5.4",
+    "react-motion": "^0.5.0",
     "react-redux": "^5.0.3",
     "react-router": "~3.0.2",
     "react-router-bootstrap": "~0.23.1",
+    "react-router-transition": "^0.1.1",
     "redux": "^3.6.0",
     "redux-form": "^6.7.0",
     "redux-logger": "^3.0.1",
