--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "~1.15.2",
     "bootstrap": "~3.3.7",
+    "compression": "^1.7.0",
     "cookie-parser": "~1.4.3",
     "csurf": "~1.9.0",
     "db-migrate": "^0.10.0-beta.21",
