--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "body-parser": "~1.15.2",
-    "bootstrap": "~3.3.7",
+    "bulma": "^0.6.1",
     "compression": "^1.7.0",
     "cookie-parser": "~1.4.3",
     "csurf": "~1.9.0",
@@ -18,7 +18,7 @@
     "db-migrate-mysql": "~1.1.10",
     "debug": "~2.2.0",
     "dotenv": "~4.0.0",
-    "express": "~4.14.0",
+    "express": "^4.16.2",
     "express-flash": "0.0.2",
     "express-jwt": "~5.3.0",
     "express-mysql-session": "~1.2.0",
@@ -35,14 +35,15 @@
     "mysql": "^2.13.0",
     "offline-plugin": "^4.8.3",
     "prop-types": "^15.5.8",
-    "react": "~15.4.2",
+    "react": "^15.4.2",
     "react-bootstrap": "~0.30.8",
     "react-bootstrap-validation": "~0.1.11",
     "react-bs-notifier": "^4.3.2",
-    "react-dom": "~15.4.2",
+    "react-dom": "^15.4.2",
     "react-dropzone": "^3.13.2",
-    "react-images": "^0.5.4",
-    "react-motion": "^0.5.0",
+    "react-images": "^0.5.11",
+    "react-lazyload": "^2.3.0",
+    "react-motion": "^0.5.2",
     "react-redux": "^5.0.3",
     "react-router": "~3.0.2",
     "react-router-bootstrap": "~0.23.1",
@@ -73,9 +74,9 @@
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
-    "webpack": "^2.2.1",
+    "webpack": "^2.7.0",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-dev-server": "^2.4.1",
-    "webpack-hot-middleware": "^2.17.1"
+    "webpack-hot-middleware": "^2.20.0"
   }
 }
