--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "react-router": "~3.0.2",
     "react-router-bootstrap": "~0.23.1",
     "react-router-transition": "^0.1.1",
+    "react-sortable-hoc": "^0.6.8",
     "redux": "^3.6.0",
     "redux-form": "^6.7.0",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sharp": "^0.18.4"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
